--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ body {
 }
 
 
+a {
+    text-decoration: none !important;
+}
+
 .react-toggle-track {
     width: 40px !important;
     height: 18px !important;
