--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,13 @@ a {
     text-decoration: none !important;
 }
 
+.hr {
+    color: black;
+    background-color: black;
+    height: 1px !important;
+    width: 30%;
+}
+
 .react-toggle-track {
     width: 40px !important;
     height: 18px !important;
