--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,9 @@ body {
 }
 
 .btn-large {
+    border-radius: 0.3rem;
+    padding: 0.5rem 1rem;
     font-size: 1.2rem;
-    line-height: normal;
 }
 
 
